fixed the text alignment in index.css

--- a/index.css
+++ b/index.css
@@ -61,7 +61,7 @@ body {
   margin-top: 5px;
   margin-bottom: 5px;
   margin-right: 10px;
-  margin-left: 10px;
+  margin-left: 1px;
   color: white;
   font-size: 25px;
   font-weight: bold; 
@@ -71,7 +71,7 @@ body {
   margin-top: 5px;
   margin-bottom: 5px;
   margin-right: 10px;
-  margin-left: 150px;
+  margin-left: 160px;
   color: white;
   font-size: 25px;
   font-weight: bold;
